Calculator/calculator.output
Grammar

    0 $accept: program $end

    1 program: expr_list '\n'
    2        | program expr_list '\n'

    3 expr_list: expr ';'
    4          | expr_list expr ';'
    5          | error ';'
    6          | expr_list error ';'

    7 expr: INTEGER
    8     | FLOAT
    9     | '-' expr
   10     | expr '-' expr
   11     | expr '+' expr
   12     | expr '*' expr
   13     | expr '/' expr
   14     | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1 2
    '(' (40) 14
    ')' (41) 14
    '*' (42) 12
    '+' (43) 11
    '-' (45) 9 10
    '/' (47) 13
    ';' (59) 3 4 5 6
    error (256) 5 6
    INTEGER <ival> (258) 7
    FLOAT <fval> (259) 8


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    program (14)
        on left: 1 2
        on right: 0 2
    expr_list <exprs> (15)
        on left: 3 4 5 6
        on right: 1 2 4 6
    expr <fval> (16)
        on left: 7 8 9 10 11 12 13 14
        on right: 3 4 9 10 11 12 13 14


State 0

    0 $accept: . program $end

    error    shift, and go to state 1
    INTEGER  shift, and go to state 2
    FLOAT    shift, and go to state 3
    '-'      shift, and go to state 4
    '('      shift, and go to state 5

    program    go to state 6
    expr_list  go to state 7
    expr       go to state 8


State 1

    5 expr_list: error . ';'

    ';'  shift, and go to state 9


State 2

    7 expr: INTEGER .

    $default  reduce using rule 7 (expr)


State 3

    8 expr: FLOAT .

    $default  reduce using rule 8 (expr)


State 4

    9 expr: '-' . expr

    INTEGER  shift, and go to state 2
    FLOAT    shift, and go to state 3
    '-'      shift, and go to state 4
    '('      shift, and go to state 5

    expr  go to state 10


State 5

   14 expr: '(' . expr ')'

    INTEGER  shift, and go to state 2
    FLOAT    shift, and go to state 3
    '-'      shift, and go to state 4
    '('      shift, and go to state 5

    expr  go to state 11


State 6

    0 $accept: program . $end
    2 program: program . expr_list '\n'

    $end     shift, and go to state 12
    error    shift, and go to state 1
    INTEGER  shift, and go to state 2
    FLOAT    shift, and go to state 3
    '-'      shift, and go to state 4
    '('      shift, and go to state 5

    expr_list  go to state 13
    expr       go to state 8


State 7

    1 program: expr_list . '\n'
    4 expr_list: expr_list . expr ';'
    6          | expr_list . error ';'

    error    shift, and go to state 14
    INTEGER  shift, and go to state 2
    FLOAT    shift, and go to state 3
    '-'      shift, and go to state 4
    '\n'     shift, and go to state 15
    '('      shift, and go to state 5

    expr  go to state 16


State 8

    3 expr_list: expr . ';'
   10 expr: expr . '-' expr
   11     | expr . '+' expr
   12     | expr . '*' expr
   13     | expr . '/' expr

    '-'  shift, and go to state 17
    '+'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ';'  shift, and go to state 21


State 9

    5 expr_list: error ';' .

    $default  reduce using rule 5 (expr_list)


State 10

    9 expr: '-' expr .
   10     | expr . '-' expr
   11     | expr . '+' expr
   12     | expr . '*' expr
   13     | expr . '/' expr

    '*'  shift, and go to state 19
    '/'  shift, and go to state 20

    $default  reduce using rule 9 (expr)


State 11

   10 expr: expr . '-' expr
   11     | expr . '+' expr
   12     | expr . '*' expr
   13     | expr . '/' expr
   14     | '(' expr . ')'

    '-'  shift, and go to state 17
    '+'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ')'  shift, and go to state 22


State 12

    0 $accept: program $end .

    $default  accept


State 13

    2 program: program expr_list . '\n'
    4 expr_list: expr_list . expr ';'
    6          | expr_list . error ';'

    error    shift, and go to state 14
    INTEGER  shift, and go to state 2
    FLOAT    shift, and go to state 3
    '-'      shift, and go to state 4
    '\n'     shift, and go to state 23
    '('      shift, and go to state 5

    expr  go to state 16


State 14

    6 expr_list: expr_list error . ';'

    ';'  shift, and go to state 24


State 15

    1 program: expr_list '\n' .

    $default  reduce using rule 1 (program)


State 16

    4 expr_list: expr_list expr . ';'
   10 expr: expr . '-' expr
   11     | expr . '+' expr
   12     | expr . '*' expr
   13     | expr . '/' expr

    '-'  shift, and go to state 17
    '+'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ';'  shift, and go to state 25


State 17

   10 expr: expr '-' . expr

    INTEGER  shift, and go to state 2
    FLOAT    shift, and go to state 3
    '-'      shift, and go to state 4
    '('      shift, and go to state 5

    expr  go to state 26


State 18

   11 expr: expr '+' . expr

    INTEGER  shift, and go to state 2
    FLOAT    shift, and go to state 3
    '-'      shift, and go to state 4
    '('      shift, and go to state 5

    expr  go to state 27


State 19

   12 expr: expr '*' . expr

    INTEGER  shift, and go to state 2
    FLOAT    shift, and go to state 3
    '-'      shift, and go to state 4
    '('      shift, and go to state 5

    expr  go to state 28


State 20

   13 expr: expr '/' . expr

    INTEGER  shift, and go to state 2
    FLOAT    shift, and go to state 3
    '-'      shift, and go to state 4
    '('      shift, and go to state 5

    expr  go to state 29


State 21

    3 expr_list: expr ';' .

    $default  reduce using rule 3 (expr_list)


State 22

   14 expr: '(' expr ')' .

    $default  reduce using rule 14 (expr)


State 23

    2 program: program expr_list '\n' .

    $default  reduce using rule 2 (program)


State 24

    6 expr_list: expr_list error ';' .

    $default  reduce using rule 6 (expr_list)


State 25

    4 expr_list: expr_list expr ';' .

    $default  reduce using rule 4 (expr_list)


State 26

   10 expr: expr . '-' expr
   10     | expr '-' expr .
   11     | expr . '+' expr
   12     | expr . '*' expr
   13     | expr . '/' expr

    '*'  shift, and go to state 19
    '/'  shift, and go to state 20

    $default  reduce using rule 10 (expr)


State 27

   10 expr: expr . '-' expr
   11     | expr . '+' expr
   11     | expr '+' expr .
   12     | expr . '*' expr
   13     | expr . '/' expr

    '*'  shift, and go to state 19
    '/'  shift, and go to state 20

    $default  reduce using rule 11 (expr)


State 28

   10 expr: expr . '-' expr
   11     | expr . '+' expr
   12     | expr . '*' expr
   12     | expr '*' expr .
   13     | expr . '/' expr

    $default  reduce using rule 12 (expr)


State 29

   10 expr: expr . '-' expr
   11     | expr . '+' expr
   12     | expr . '*' expr
   13     | expr . '/' expr
   13     | expr '/' expr .

    $default  reduce using rule 13 (expr)
